# elm-ast

./: .gitmodules  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  ELM_ASSIST.md  ELM_REVIEW_REPLACEMENT.md  README.md  ROADMAP.md  TEST_COVERAGE.md  TODO.md
.github/workflows/: ci.yml
benches/: parse_bench.rs
docs/: printing.md
editors/vscode/: package-lock.json  package.json
editors/vscode/src/: extension.ts
examples/: dbg.rs  diff_analysis.rs  diff_pretty.rs  dump_ast.rs  elm_identifiers.rs  elm_parse.rs  elm_pretty.rs  elm_roundtrip.rs  expose_probe.rs  pretty_print_file.rs  print_file.rs  probe.rs  probe_doc.rs  roundtrip_debug.rs  show_compact.rs  show_pretty.rs  test_probe.rs
src/: builder.rs  comment.rs  declaration.rs  display.rs  exposing.rs  expr.rs  file.rs  fold.rs  ident.rs  import.rs  lexer.rs  lib.rs  literal.rs  module_header.rs  node.rs  operator.rs  pattern.rs  print.rs  span.rs  token.rs  type_annotation.rs  visit.rs  visit_mut.rs  wasm.rs
src/parse/: declaration.rs  expr.rs  mod.rs  module.rs  pattern.rs  type_annotation.rs
src/print/: block_comment.rs  comment_slots.rs  decl_emission.rs  doc_markdown.rs  import_layout.rs  mod.rs  pipeline_layout.rs
src/print/doc_markdown/: blocks.rs  markdown.rs  mod.rs  predicates.rs  reformat.rs  reparse.rs  spacing.rs
tests/: edge_case_tests.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs  printer_tests.rs  property_tests.rs  visitor_tests.rs  wasm_tests.rs
tools/elm-deps/: Cargo.toml  README.md
tools/elm-deps/src/: graph.rs  main.rs
tools/elm-deps/tests/: graph_tests.rs  integration_tests.rs
tools/elm-lint/: Cargo.toml  README.md
tools/elm-lint/src/: cache.rs  collect.rs  config.rs  elm_json.rs  fix.rs  lib.rs  main.rs  output.rs  rule.rs  watch.rs
tools/elm-lint/src/rules/: cognitive_complexity.rs  mod.rs  no_always_identity.rs  no_bool_operator_simplify.rs  no_boolean_case.rs  no_confusing_prefix_operator.rs  no_debug.rs  no_deprecated.rs  no_duplicate_ports.rs  no_empty_let.rs  no_empty_list_concat.rs  no_empty_record_update.rs  no_exposing_all.rs  no_fully_applied_prefix_operator.rs  no_identity_function.rs  no_if_true_false.rs  no_import_exposing_all.rs  no_inconsistent_aliases.rs  no_list_literal_concat.rs  no_max_line_length.rs  no_maybe_map_with_nothing.rs  no_missing_documentation.rs  no_missing_type_annotation.rs  no_missing_type_annotation_in_let_in.rs  no_missing_type_expose.rs  no_negation_of_boolean_operator.rs  no_nested_negation.rs  no_pipeline_simplify.rs  no_premature_let_computation.rs  no_record_pattern_in_function_args.rs  no_recursive_update.rs  no_redundant_cons.rs  no_redundantly_qualified_type.rs  no_result_map_with_err.rs  no_shadowing.rs  no_simple_let_body.rs  no_single_pattern_case.rs  no_string_concat.rs  no_todo_comment.rs  no_unnecessary_parens.rs  (+15 more)
tools/elm-lint/tests/: integration_tests.rs  rule_tests.rs
tools/elm-lsp/: Cargo.toml
tools/elm-lsp/src/: analysis.rs  backend.rs  convert.rs  lib.rs  main.rs  state.rs
tools/elm-lsp/tests/: analysis_tests.rs  convert_tests.rs
tools/elm-refactor/: Cargo.toml  README.md
tools/elm-refactor/src/: lib.rs  main.rs  project.rs
tools/elm-refactor/src/commands/: mod.rs  qualify_imports.rs  rename.rs  sort_imports.rs
tools/elm-refactor/tests/: cross_file_tests.rs  integration_tests.rs  refactor_tests.rs
tools/elm-search/: Cargo.toml  README.md
tools/elm-search/src/: lib.rs  main.rs  query.rs  search.rs
tools/elm-search/tests/: integration_tests.rs  search_tests.rs
tools/elm-unused/: Cargo.toml  README.md
tools/elm-unused/src/: analyze.rs  collect.rs  lib.rs  main.rs
tools/elm-unused/tests/: analysis_tests.rs  integration_tests.rs
