[workspace]
members = [".", "tools/elm-unused"]

[package]
name = "elm-ast-rs"
version = "0.1.0"
edition = "2024"
description = "A syn-quality Rust library for parsing and constructing Elm 0.19.1 ASTs"
license = "MIT OR Apache-2.0"
keywords = ["elm", "ast", "parser", "syntax"]
categories = ["parsing", "development-tools"]
repository = "https://github.com/joshburgess/elm-ast-rs"
documentation = "https://docs.rs/elm-ast-rs"
readme = "README.md"

[features]
default = ["full"]
full = ["parsing", "printing", "visit", "visit-mut", "fold"]
parsing = []
printing = []
visit = []
fold = []
visit-mut = []
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:serde_json", "parsing", "printing"]
extra-traits = []

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false
