[package]
name = "elm-ast"
version = "0.1.2"
edition = "2024"
description = "A syn-quality Rust library for parsing and constructing Elm 0.19.1 ASTs"
license = "MIT OR Apache-2.0"
keywords = ["elm", "ast", "parser", "syntax"]
categories = ["parsing", "development-tools"]
repository = "https://github.com/joshburgess/elm-ast"
documentation = "https://docs.rs/elm-ast"
readme = "README.md"
exclude = ["test-fixtures/"]

[features]
default = ["full"]
full = ["parsing", "printing", "visit", "visit-mut", "fold"]
parsing = []
printing = []
visit = []
fold = []
visit-mut = []
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:serde_json", "parsing", "printing"]
[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[example]]
name = "elm_identifiers"
required-features = ["parsing", "visit"]

[[example]]
name = "elm_parse"
required-features = ["parsing"]

[[example]]
name = "elm_roundtrip"
required-features = ["parsing", "printing"]

[[example]]
name = "print_file"
required-features = ["parsing", "printing"]

[[example]]
name = "roundtrip_debug"
required-features = ["parsing", "printing"]

[[bench]]
name = "parse_bench"
harness = false
required-features = ["parsing", "printing"]
