[package]
name = "elm-lint"
version = "0.1.0"
edition = "2024"
description = "Fast Elm linter with built-in rules"
license = "MIT OR Apache-2.0"

[dependencies]
elm-ast = { path = "../.." }
clap = { version = "4", features = ["derive"] }
ariadne = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1.10"
notify = { version = "7", features = ["macos_fsevent"] }
