[package]
name = "elm-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol server for Elm linting"
license = "MIT OR Apache-2.0"

[dependencies]
elm-ast = { path = "../.." }
elm-lint = { path = "../elm-lint" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
